# alloc-from-pool

./: Cargo.toml  README.md
.github/workflows/: miri.yml  test.yml
benches/: compare_with_box.rs
src/: alloc_in.rs  allocations_ptr.rs  factory.rs  inner_pool.rs  inner_slot.rs  lib.rs  pool.rs  pool_value.rs  slot.rs  tests.rs
