[package]
description = "Single-threaded object pool implementation"
edition = "2021"
license = "MIT"
name = "alloc-from-pool"
version = "1.0.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
harness = false
name = "compare_with_box"
